<resources>
    <string name="app_name">Expense-Tracker</string>
    <!-- common -->
    <string name="labelRetry">Retry</string>
    <string name="noDataAvailable">No data available</string>
    <!-- home screen -->
    <string name="titleHomeScreen">Expenses</string>
    <string name="labelTotalExpenses">Total Expenses :</string>
    <string name="labelStartDate">Start Date</string>
    <string name="labelEndDate">End Date</string>
    <!-- add/edit expense screen  -->
    <string name="titleAddExpense">Add</string>
    <string name="titleEditExpense">Edit</string>
    <string name="labelCancelExpenseDialog">Cancel</string>
    <string name="messageExpenseItemSavedSuccess">Saved successfully</string>
    <!-- labeled text view -->
    <string name="labelDateAndTime">Date and Time</string>
    <string name="labelAmount">Amount</string>
    <string name="labelTitle">Title</string>
    <string name="labelDescription">Description</string>
    <string name="labelCategory">Category</string>
    <string name="labelPaymentMethodType">Payment method</string>
    <string name="buttonLabelSave">Save</string>
    <!-- chooser bottom sheet -->
    <string name="labelChoose">Select option</string>
    <string name="labelSelectCategory">Select category</string>
    <string name="labelSelectPaymentMethod">Select payment method</string>
    <!-- expense details screen -->
    <string name="titleExpenseDetails">Details</string>
    <string name="buttonLabelDelete">Delete</string>
    <string name="buttonLabelEdit">Edit</string>
    <string name="messageExpenseItemDeletedSuccess">Deleted successfully</string>
    <!-- delete confirmation dialog -->
    <string name="deleteConfirmationDialogTitle">Delete</string>
    <string name="deleteConfirmationDialogMessage">Are you sure you want to delete this record?</string>
    <string name="deleteConfirmationDialogNegativeActionLabel">No</string>
    <string name="deleteConfirmationDialogPositiveActionLabel">Yes</string>
    <!-- setting -->
    <string name="titleSettingsScreen">Settings</string>
    <string name="settingOptionCurrency">Currency</string>
    <string name="settingOptionAbout">About</string>
    <!--currency list screen -->
    <string name="titleCurrencyListScreen">Currency</string>
</resources>